<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="false"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="right"
        android:textSize="48dp"
        android:text="0"
        android:id="@+id/showResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="right"
        android:textSize="32dp"
        android:text="0.0"
        android:textAllCaps="false"
        android:id="@+id/showInput"
        android:layout_below="@+id/showResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/showResult"
        android:layout_alignEnd="@+id/showResult" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnBackspace"
            android:id="@+id/btnBackSpace" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnCE"
            android:id="@+id/btnCE" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn7"
            android:id="@+id/btn7"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:id="@+id/btn8" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:id="@+id/btn9" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnDiv"
            android:id="@+id/btnDiv" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn4"
            android:id="@+id/btn4" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:id="@+id/btn5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn6"
            android:id="@+id/btn6" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnMul"
            android:id="@+id/btnMul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_above="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn1"
            android:id="@+id/btn1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:id="@+id/btn2" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:id="@+id/btn3" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnAdd"
            android:id="@+id/btnAdd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btn0"
            android:id="@+id/btn0" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnPoint"
            android:id="@+id/btnPoint" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnEqu"
            android:id="@+id/btnEqu" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/btnSub"
            android:id="@+id/btnSub" />
    </LinearLayout>

</RelativeLayout>